[package]
name = "abyssal"
version = "0.1.0"
edition = "2024"

[dependencies]
font8x8 = "0.3.1"
fontdue = "0.9.3"
minifb = "0.28.0"
rodio = { version = "0.20", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
